# kernels

./: .pre-commit-config.yaml  CHANGELOG.md  FULL_TEST_REVIEW.md  Makefile  PERMIT_TOKEN_INVARIANTS_VALIDATION.md  README.md  SECURITY.md  mkdocs.yml  mypy.ini  pyproject-additions.toml  pyproject.toml  skills.md
.github/: FUNDING.yml
.github/workflows/: benchmark.yml  ci.yml  codex-pr-generator.yml  codex-self-heal.yml  dependency-canary.yml  dependency-health.yml  docs.yml  gpu-hardware.yml  hpc-matrix.yml  release.yml  security.yml  smoke.yml
benchmarks/: results.sample.json
docs/: AGENT_FRAMEWORK_INTEGRATIONS.md  COMPLIANCE_MAPPING.md  OPENCLAW_INTEGRATION.md  README.md
docs/pipelines/: HPC_CICD_ARCHITECTURE.md
docs/roadmap/: ROADMAP.md
examples/: 01_minimal_request.py  03_fail_closed_ambiguity.py  04_external_audit_replay.py  05_variant_comparison.py  06_langchain_governed_agent.py  07_huggingface_governed_agent.py  08_openclaw_governed_agent.py  09_crewai_multiagent_governance.py  10_autogpt_autonomous_governance.py  11_langgraph_stateful_governance.py  permit_integration_example.py
implementations/: permits_threadsafe.py  storage.py
kernels/: api.py  permits.py
kernels/async_support/: async_dispatcher.py  async_kernel.py
kernels/audit/: ledger.py  (+1 more)
scripts/: org_repo_review.py  smoke.sh
skills/: compatibility_rules.md  cuda.md  memory_coalescing.md  optimization_strategies.md  tiling.md
spec/: PERMIT_TOKENS.md  README.md
tests/: test_agent_automation.py  test_jurisdiction.py  test_kernel_permit_integration.py  test_permits.py  test_reference_implementations.py  test_time_utils.py
(+38 files in other folders)
