[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kernels"
dynamic = ["version"]
description = "Deterministic Control Planes for AI Systems"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Kernels Contributors"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
keywords = ["kernel", "control-plane", "deterministic", "audit", "ai-systems"]

[project.scripts]
kernels = "kernels.__main__:main"

[project.urls]
Repository = "https://github.com/Shards-foundation/kernels"
Documentation = "https://github.com/Shards-foundation/kernels/tree/main/docs"
Changelog = "https://github.com/Shards-foundation/kernels/blob/main/CHANGELOG.md"

[tool.setuptools.dynamic]
version = {attr = "kernels._version.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = ["kernels*"]

[tool.ruff]
line-length = 100
target-version = "py39"
extend-exclude = [".github/", "*.md", "*.yaml", "*.yml"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]
ignore = ["E501"]
